--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,4 @@
 # title: Ana M. Tárano's Portfolio Website
 description: Check out my projects!
 logo: 
-# remote_theme: "mmistakes/jekyll-theme-basically-basic@1.4.5"
-
-plugins:
-    - jekyll-remote-theme
-
-remote_theme: xdanger/jekyll-theme-notion
+remote_theme: "mmistakes/jekyll-theme-basically-basic@1.4.5"
