--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@
 description: Check out my projects!
 logo: 
 remote_theme: "mmistakes/jekyll-theme-basically-basic@1.4.5"
+
+load_paths:
+    - _sass
