--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # title: Ana M. Tárano's Portfolio Website
 description: Check out my projects!
 logo: 
-# remote_theme: "mmistakes/jekyll-theme-basically-basic@1.4.5"
-remote_theme: mmistakes/minimal-mistakes #pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
