--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,7 @@
 # title: Ana M. Tárano's Portfolio Website
-description: 
-
-linkedin_username: anatarano
-# * [GitHub](https://github.com/anatarano/)
-# * [Email](anatarano@gmail.com)
-author :
-  name : Ana M. Tarano
-  email : anatarano@gmail.com
-  github : anatarano
+description: *[Linkedin](https://www.linkedin.com/in/anatarano/)
+* [GitHub](https://github.com/anatarano/)
+* [Email](anatarano@gmail.com)
 
 logo: 
 remote_theme: pages-themes/minimal@v0.2.0
