--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 # title: Ana M. Tárano's Portfolio Website
-description: *[Linkedin](https://www.linkedin.com/in/anatarano/)
-* [GitHub](https://github.com/anatarano/)
-* [Email](anatarano@gmail.com)
+# description:
 
 logo: 
 remote_theme: pages-themes/minimal@v0.2.0
